--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,22 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/onboarding.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+        rel="stylesheet"
+    >
 
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
+
+    <header class="top-toolbar loading-screen">
+      <div class="logo">
+          <img width="83px" height="22px" src="/zycommon-web/assets/logo.svg"/>
+      </div>
+    </header>
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/onboarding.js"></script>
